
syntax = "proto3";

package api.git;
import "google/api/annotations.proto";
option go_package = "go-git-repositories/api/git;git";
option java_multiple_files = true;
option java_package = "api.git";


service User {
//	rpc CreateUser (CreateUserRequest) returns (CreateUserReply);
//	rpc UpdateUser (UpdateUserRequest) returns (UpdateUserReply);
//	rpc DeleteUser (DeleteUserRequest) returns (DeleteUserReply);
//	rpc GetUser (GetUserRequest) returns (GetUserReply);
//	rpc ListUser (ListUserRequest) returns (ListUserReply);
	rpc Login (LoginRequest) returns (LoginReply){
			option (google.api.http) = {
				post: "/login",
				body:"*"
			};
	};
	rpc CreateUser (CreateUserRequest) returns (CreateUserReply){
		option (google.api.http) = {
			post: "/register",
			body:"*"
		};
	};
	rpc GetInfo ( InfoRequest) returns( InfoReply){
		option (google.api.http) = {
			get: "/info/{name}"
		};


	}
}

message  InfoRequest {
	string name = 1;


}
message  InfoReply {

	string msg = 1;


}
message LoginRequest {
	string username = 1 ;//用户名
	string password = 2; //用户名

}
message LoginReply {

	string token = 1; // token
}

message CreateUserRequest {
	string username = 1 ;//用户名
	string password = 2; //用户名
}
message CreateUserReply {
	string msg =1; //放回参数



}

//message UpdateUserRequest {}
//message UpdateUserReply {}
//
//message DeleteUserRequest {}
//message DeleteUserReply {}
//
//message GetUserRequest {}
//message GetUserReply {}
//
//message ListUserRequest {}
//message ListUserReply {}